[Debug] fix a bug when search page on small viewport

--- a/vicflora-nuxt/pages/Flora/Search/Search.scss
+++ b/vicflora-nuxt/pages/Flora/Search/Search.scss
@@ -69,9 +69,17 @@
     }
     .m-item-familyname{
         font-size: small;
+        text-align: right;
     }
 }
 .filter-queries-key {
     font-weight: bold;
 }
+
+@media screen and (max-width:768px){
+    .m-responsive-disappear {
+        display: none;
+    }
+}
+
 
